demoshop_restAPIvsReact/src/main/java/com/example/demo/error/WhitelabelErrorException.java
package com.example.demo.error;


import lombok.NoArgsConstructor;

@NoArgsConstructor
public class WhitelabelErrorException extends RuntimeException {
	/**
	 * 
	 */
	private static final long serialVersionUID = 6177713163507973882L;

}
